// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-progress/PanelSpinner renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderColor": "rgba(32, 36, 45, 0.15)",
      "borderRadius": 308.5,
      "borderWidth": 1,
      "elevation": 10,
      "justifyContent": "center",
      "padding": 31,
      "shadowColor": "#20242D",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 18.5,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#2B78EE"
      height="48"
      width="48"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-progress/PanelSpinner renders correctly canceled 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderColor": "rgba(32, 36, 45, 0.15)",
      "borderRadius": 308.5,
      "borderWidth": 1,
      "elevation": 10,
      "justifyContent": "center",
      "padding": 31,
      "shadowColor": "#20242D",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 18.5,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#2B78EE"
      height="48"
      width="48"
    />
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "aspectRatio": 1,
          "borderRadius": 37,
          "justifyContent": "center",
          "width": 74,
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Object {
          "color": "#9BA1B0",
          "fontFamily": "Neotis",
          "fontSize": 37,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-progress/PanelSpinner renders correctly done 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderColor": "rgba(32, 36, 45, 0.15)",
      "borderRadius": 308.5,
      "borderWidth": 1,
      "elevation": 10,
      "justifyContent": "center",
      "padding": 31,
      "shadowColor": "#20242D",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 18.5,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "aspectRatio": 1,
        "borderRadius": 37,
        "justifyContent": "center",
        "width": 74,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Object {
          "color": "#2B78EE",
          "fontFamily": "Neotis",
          "fontSize": 74,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-progress/PanelSpinner renders correctly error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderColor": "rgba(32, 36, 45, 0.15)",
      "borderRadius": 308.5,
      "borderWidth": 1,
      "elevation": 10,
      "justifyContent": "center",
      "padding": 31,
      "shadowColor": "#20242D",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 18.5,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "aspectRatio": 1,
          "borderRadius": 37,
          "justifyContent": "center",
          "width": 74,
        },
        Object {
          "backgroundColor": "#EEEFF1",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Object {
          "color": "#9BA1B0",
          "fontFamily": "Neotis",
          "fontSize": 49.5,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;
